2011-07-15  Glenn Morris  <rgm@gnu.org>

	* jka-compr.el (jka-compr-verbose): Move from here...
	* jka-cmpr-hook.el (jka-compr-verbose): ... to here.  (Bug#9090)
	Add missing :version tag.
	* info.el: No need to require jka-compr when compiling.

2011-07-15  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* emacs-lisp/cl-macs.el (declare): Link to the "Declarations" node.

	* info.el (Info-beginning-of-buffer): New command.
	(Info-mode-map): Use it instead of `beginning-of-buffer' to allow
	announcing `b' as the key (bug#8325).
	(Info-mode-menu): Use `Info-beginning-of-buffer' for consistency.

	* emacs-lisp/cl-macs.el (declare): Doc string fix-up.

	* international/mule-cmds.el
	(describe-specified-language-support): Make the error message
	clearer (bug#8905).

	* emacs-lisp/cl-macs.el (declare): Add a doc string (bug#8690).

	* isearch.el (isearch-barrier): Add a doc string, since it's
	mentioned in a function doc string (bug#8678).

2011-07-15  Martin Rudalics  <rudalics@gmx.at>

	* window.el (switch-to-buffer): Call pop-to-buffer with normalized
	buffer argument (Bug#9083) and self-identifying label argument.

2011-07-15  Glenn Morris  <rgm@gnu.org>

	* emacs-lisp/debug.el (debug): Doc fix.  (Bug#8273)

2011-07-14  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* man.el (Man-fontify-manpage): Fix message when formatting the
	man page (bug#7929).

2011-07-14  Eli Zaretskii  <eliz@gnu.org>

	* buff-menu.el (Buffer-menu-buffer+size): Accept an additional
	argument LRM; if non-nil, append an invisible LRM character to the
	buffer name.
	(list-buffers-noselect): Call Buffer-menu-buffer+size with the
	last argument non-nil, when formatting buffer names.
	(Buffer-menu-mode, list-buffers-noselect): Force left-to-right
	paragraph direction.

2011-07-14  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* man.el (Man-bgproc-sentinel): Skip any arguments and only output
	the man page name (bug#7929).

	* image.el (put-image): Mention the `put-image' overlay property
	(bug#7834).
