@@ -282,7 +282,7 @@ Not documented
 ;;;;;;  flet progv psetq do-all-symbols do-symbols dotimes dolist
 ;;;;;;  do* do loop return-from return block etypecase typecase ecase
 ;;;;;;  case load-time-value eval-when destructuring-bind function*
-;;;;;;  defmacro* defun* gentemp gensym) "cl-macs" "cl-macs.el" "dd99db1e96dff411cc5d484a639a1330")
+;;;;;;  defmacro* defun* gentemp gensym) "cl-macs" "cl-macs.el" "2261724608e3223036b863d214f7dc0c")
 ;;; Generated autoloads from cl-macs.el
 
 (autoload 'gensym "cl-macs" "\
@@ -541,12 +541,13 @@ values.  For compatibility, (values A B C) is a synonym for (list A B C).
 \(fn TYPE FORM)" nil (quote macro))
 
 (autoload 'declare "cl-macs" "\
-Declare something about SPECS while compiling.
+Declare SPECS about the current function while compiling.
 For instance
 
   (declare (warn 0))
 
-will turn off byte-compile warnings.
+will turn off byte-compile warnings in the function.
+See Info node `(cl)Declarations' for details.
 
 \(fn &rest SPECS)" nil (quote macro))
 
